--- a/playground/package.json
+++ b/playground/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "private": true,
   "scripts": {
-    "webpack": "npx webpack --config webpack.config.js",
+    "webpack": "cd playground/ && npm run webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
